# computer_game

./: CMakeLists.txt  README.md
game/inc/: alu.h  comparator.h  decoder_bus.h  draw_coins.h  eval.h  gen_inst.h  inst_box.h  inst_drag.h  inst_list.h  instructions.h  main.h  manual.h  programs.h  registers.h  screen_controls.h  styles.h  text.h
game/src/: alu.c  comparator.c  decoder_bus.c  draw_coins.c  eval.c  gen_inst.c  inst_box.c  inst_drag.c  inst_list.c  main.c  manual.c  programs.c  registers.c  screen_controls.c
